--- a/css/index.css
+++ b/css/index.css
@@ -52,3 +52,14 @@ color: antiquewhite;
 width: 40%;
 
 }
+
+.h1{
+
+    font-family: Arial, Helvetica, sans-serif;
+    color: azure;
+}
+
+.cadastro {
+
+
+}
