--- a/css/index.css
+++ b/css/index.css
@@ -110,11 +110,12 @@ border: solid 10px white;
 }
 
 #a{
-    background-color: #FFD700;
+    background-color: #34bd28;
 }
 
 
 #voltar{
 
-    background-color: #FFD700;
+    background-color: #34bd28;
 }
+
