--- a/css/index.css
+++ b/css/index.css
@@ -119,3 +119,14 @@ border: solid 10px white;
     background-color: #34bd28;
 }
 
+p{
+font-family: Arial, Helvetica, sans-serif;
+color: black;
+
+}
+
+.tela{
+border: 3px solid black;
+
+
+}
